update per sdl review; fix color contrast

--- a/src/app/authentication/components/authenticationSelection.scss
+++ b/src/app/authentication/components/authenticationSelection.scss
@@ -4,7 +4,7 @@
 **********************************************************/
 .auth-slection-container {
     display: flex;
-    padding-top: 45px;
+    margin: 45px;
     justify-content: center;
     .auth-selection-tile {
         padding: 50px;
